--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.23",
