--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "lucide-vue-next": "^0.562.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-draggable-plus": "^0.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
