--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,4 +27,5 @@ sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls
 dirs = "6.0.0"
 sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite"] }
 tokio = { version = "1.49.0", features = ["full"] }
+chrono = "0.4.42"
 
